# SSandbox

./: .gitignore  .licenseheader  CMakeLists.txt  README.md  THANKS
cmake/: CMakeLists.txt
cmake/macros/: Macros.cmake
dep/: CMakeLists.txt
dep/boost/: CMakeLists.txt
dep/openssl/: CMakeLists.txt
dep/protobuf/: CMakeLists.txt  libprotobuf-lite.cmake  libprotobuf.cmake
dep/rapidjson/: CMakeLists.txt
dep/zlib/: CMakeLists.txt
misc/: CMakeLists.txt  SSandbox.conf  ca_bundle.txt.signed  cmake_install.cmake  id_rsa_connect_to
misc/datastores/: charstartoutfit.csv  chrmodel.csv  chrraces.csv  chrracexchrmodel.csv  itemappearance.csv  itemmodifiedappearance.csv
src/: CMakeLists.txt
src/Launcher/: CMakeLists.txt  Launcher.cpp  LauncherShared.h
src/proto/: CMakeLists.txt
src/proto/PrecompiledHeaders/: protoPCH.h
src/proto/bgs/low/pb/client/: account_service.pb.cc  account_service.pb.h  account_types.pb.cc  account_types.pb.h  attribute_types.pb.cc  attribute_types.pb.h  authentication_service.pb.cc  authentication_service.pb.h  challenge_service.pb.cc  challenge_service.pb.h  channel_types.pb.cc  channel_types.pb.h  club_ban.pb.cc  club_ban.pb.h  club_core.pb.cc  club_core.pb.h  club_enum.pb.cc  club_enum.pb.h  club_invitation.pb.cc  club_invitation.pb.h  club_member.pb.cc  club_member.pb.h  club_member_id.pb.cc  club_member_id.pb.h  club_membership_listener.pb.cc  club_membership_listener.pb.h  club_membership_service.pb.cc  club_membership_service.pb.h  club_membership_types.pb.cc  club_membership_types.pb.h  club_notification.pb.cc  club_notification.pb.h  club_range_set.pb.cc  club_range_set.pb.h  club_request.pb.cc  club_request.pb.h  club_role.pb.cc  club_role.pb.h  club_stream.pb.cc  club_stream.pb.h  (+54 more)
src/proto/bgs/low/pb/client/api/client/v1/: channel_id.pb.cc  channel_id.pb.h
src/proto/bgs/low/pb/client/api/client/v2/: attribute_types.pb.cc  attribute_types.pb.h  report_service.pb.cc  report_service.pb.h  report_types.pb.cc  report_types.pb.h
src/proto/bgs/low/pb/client/global_extensions/: field_options.pb.cc  field_options.pb.h  message_options.pb.cc  message_options.pb.h  method_options.pb.cc  method_options.pb.h  range.pb.cc  range.pb.h  service_options.pb.cc  service_options.pb.h
src/server/: CMakeLists.txt  Globals.h  Main.cpp
src/server/Account/: Account.cpp  Account.h
src/server/Battlenet/: BattlenetRestSession.h  BattlenetSession.h
src/server/Character/: Character.cpp  Character.h  ObjectGUID.h
src/server/Commands/: CommandHandler.cpp  CommandHandler.h  Commands.cpp  Commands.h
src/server/Crypt/: AES.h  HmacSha256.h  Rsa.h  SessionKeyGeneration.h  Sha256.h
src/server/Datastores/: DB2.h  DB2Files.cpp  DB2Files.h
src/server/Game/: Object.cpp  Object.h
src/server/Log/: Log.cpp  Log.h
src/server/Network/: Acceptor.cpp  Acceptor.h  Buffer.h  Opcodes.cpp  Opcodes.h  SessionMgr.h  Socket.h  SocketBuffer.h  SslStream.h
src/server/Player/: PlayerSession.cpp  PlayerSession.h
src/server/PrecompiledHeaders/: PCH.cpp  PCH.h
src/server/Server/: RestServer.h  ServerMgr.cpp  ServerMgr.h
src/server/Shared/: Defines.h  Utils.cpp  Utils.h
src/server/Utils/: Config.cpp  Config.h  JSON.cpp  JSON.h  Position.cpp  Position.h
src/server/World/: WorldConnection.h
